upgrade gitlab API to v4 and add some optimization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ component.rest.connectionRequestTimeout = 2000
 component.rest.connectTimeout = 2000
 component.rest.readTimeout = 10000
 
-git.gitlabUrl = http://XXX
-git.privateToken = XXX
-git.projectDir = XXX
+git.gitlabUrl = <your gitLab url>
+## http??????privateToken git clone https://oauth2:<access_token>@gitlab.com/.../xxx.git
+## ssh ??????????
+git.cloneType = http
+git.privateToken = <your private token>
+git.projectDir = <your code base path>
